--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -20,6 +21,8 @@
     "@eslint/eslintrc": "^3",
     "@netlify/next": "^1.4.9",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.0.1",
+    "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4"
