--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "next-intl": "^4.1.0",
